2011-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #3440327.

2011-11-14 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt,
	* device/non-free/include/pic14/pic16f145[589].h,
	* device/non-free/include/pic14/pic16f178[23].h,
	* device/non-free/lib/pic14/libdev/Makefile.in,
	* device/non-free/lib/pic14/libdev/devices.txt,
	* device/non-free/lib/pic14/libdev/pic16f145[589].c,
	* device/non-free/lib/pic14/libdev/pic16f178[23].c:
	  add support for 16f145[589] and 16f178[23] devices

	* device/non-free/include/pic14/pic12f683.h,
	* device/non-free/lib/pic14/libdev/pic12f683.c:
	  updated from new sources

	* doc/sdccman.lyx:
	  update device list, clarify use of NO_LEGACY_NAMES

2011-11-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: added the boost dependency,
	  --peep-return, --no-peep-return, --fomit-frame-pointer,
	  the use of .omf extension,
	  single mnemonic per assembly line,
	  available peephole functions

2011-11-12 Borut Razem <borut.razem AT gmail.com>

	* added XXX_bits deprecation note in chapter
	  1.4 Compatibility with previous versions

2011-11-11 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/libdev/mkall.sh:
	  simplify device library update process further

	* support/scripts/inc2h.pl:
	  avoid generating duplicate bit defines;
	  rename XXX_bits to XXXbits to be compatible with PIC16 and HiTech,
	  but retain XXX_bits symbols for compatibility (to prevent legacy
	  names from being visible, #define NO_LEGACY_NAMES before
	  #include'ing device headers

	* device/include/pic14/pic14devices.txt,
	* device/non-free/lib/pic14/libdev/devices.txt:
	  updated device names: 16{f => lf}190x, 1{2 => 6}f1847,
	  no devices exist with the original names

	* device/non-free/include/pic14/pic12f1840.h,
	* device/non-free/include/pic14/pic16f1507.h,
	* device/non-free/include/pic14/pic16f182[34589].h,
	* device/non-free/include/pic14/pic16f1847.h,